# TheVeryBestGayme

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
glad/include/glad/: gl.h
resources/: test.frag  test.vert
src/: Application.cpp  Application.hpp  Mesh.cpp  Mesh.hpp  Resource.cpp  Resource.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  main.cpp
